test/statements/sungeun/bad_break.good
bad_break.chpl:29: error: bad label on break or continue
